--- a/rest/src/main/asciidoc/__resource_post_list.adoc
+++ b/rest/src/main/asciidoc/__resource_post_list.adoc
@@ -3,18 +3,18 @@
 
 A `GET` request retrieves a list of the post titles and slug values.
 
-include::../../util/H-REQUEST.adoc[]
+include::__H_REQUEST.adoc[]
 
-include::../../util/H-EXAMPLE.adoc[]
+include::__H_EXAMPLE.adoc[]
 
 include::{snippets}/get_posts/http-request.adoc[]
 
-include::../../util/H-RESPONSE.adoc[]
+include::__H_RESPONSE.adoc[]
 
-include::../../util/H-RESPONSE-FIELDS.adoc[]
+include::__H_RESPONSE_FIELDS.adoc[]
 
 include::{snippets}/get_posts/response-fields.adoc[]
 
-include::../../util/H-EXAMPLE-BARE.adoc[]
+include::__H_EXAMPLE_BARE.adoc[]
 
 include::{snippets}/get_posts/http-response.adoc[]
