--- a/rest/src/main/asciidoc/__resource_post_create.adoc
+++ b/rest/src/main/asciidoc/__resource_post_create.adoc
@@ -4,22 +4,22 @@
 A `POST` request adds a new _Post_ entry in the DB.
 This service is only available to users with enough permissions to create a new post.
 
-include::../../util/H-REQUEST.adoc[]
+include::__H_REQUEST.adoc[]
 
-include::../../util/H-REQUEST-FIELDS.adoc[]
+include::__H_REQUEST_FIELDS.adoc[]
 
 include::{snippets}/create_post/request-fields.adoc[]
 
-include::../../util/H-EXAMPLE.adoc[]
+include::__H_EXAMPLE.adoc[]
 
 include::{snippets}/create_post/http-request.adoc[]
 
-include::../../util/H-RESPONSE.adoc[]
+include::__H_RESPONSE.adoc[]
 
-include::../../util/H-RESPONSE-FIELDS.adoc[]
+include::__H_RESPONSE_FIELDS.adoc[]
 
 include::{snippets}/create_post/response-fields.adoc[]
 
-include::../../util/H-EXAMPLE-BARE.adoc[]
+include::__H_EXAMPLE_BARE.adoc[]
 
 include::{snippets}/create_post/http-response.adoc[]
