--- a/rest/src/main/asciidoc/__resource_post_get.adoc
+++ b/rest/src/main/asciidoc/__resource_post_get.adoc
@@ -3,22 +3,22 @@
 
 A `GET` request returns a post information.
 
-include::../../util/H-REQUEST.adoc[]
+include::__H_REQUEST.adoc[]
 
-include::../../util/H-REQUEST-PATH-PARAMS.adoc[]
+include::__H_REQUEST_PATH_PARAMS.adoc[]
 
 include::{snippets}/get_post/path-parameters.adoc[]
 
-include::../../util/H-EXAMPLE.adoc[]
+include::__H_EXAMPLE.adoc[]
 
 include::{snippets}/get_post/http-request.adoc[]
 
-include::../../util/H-RESPONSE.adoc[]
+include::__H_RESPONSE.adoc[]
 
-include::../../util/H-RESPONSE-FIELDS.adoc[]
+include::__H_RESPONSE_FIELDS.adoc[]
 
 include::{snippets}/get_post/response-fields.adoc[]
 
-include::../../util/H-EXAMPLE-BARE.adoc[]
+include::__H_EXAMPLE_BARE.adoc[]
 
 include::{snippets}/get_post/http-response.adoc[]
