--- a/rest/src/main/asciidoc/__resource_post_partial_update.adoc
+++ b/rest/src/main/asciidoc/__resource_post_partial_update.adoc
@@ -3,26 +3,26 @@
 
 A `PATCH` (partial and full update) request updates a post.
 
-include::../../util/H-REQUEST.adoc[]
+include::__H_REQUEST.adoc[]
 
-include::../../util/H-REQUEST-PATH-PARAMS.adoc[]
+include::__H_REQUEST_PATH_PARAMS.adoc[]
 
 include::{snippets}/partial_update_post/path-parameters.adoc[]
 
-include::../../util/H-REQUEST-FIELDS.adoc[]
+include::__H_REQUEST_FIELDS.adoc[]
 
 include::{snippets}/partial_update_post/request-fields.adoc[]
 
-include::../../util/H-EXAMPLE.adoc[]
+include::__H_EXAMPLE.adoc[]
 
 include::{snippets}/partial_update_post/http-request.adoc[]
 
-include::../../util/H-RESPONSE.adoc[]
+include::__H_RESPONSE.adoc[]
 
-include::../../util/H-RESPONSE-FIELDS.adoc[]
+include::__H_RESPONSE_FIELDS.adoc[]
 
 include::{snippets}/partial_update_post/response-fields.adoc[]
 
-include::../../util/H-EXAMPLE-BARE.adoc[]
+include::__H_EXAMPLE_BARE.adoc[]
 
 include::{snippets}/partial_update_post/http-response.adoc[]
