--- a/rest/src/main/asciidoc/__http_status_codes.adoc
+++ b/rest/src/main/asciidoc/__http_status_codes.adoc
@@ -20,14 +20,15 @@ HTTP status codes. See https://developer.mozilla.org/en-US/docs/Web/HTTP/Status[
 
 | `201 Created`
 | The request has succeeded and a new resource has been created as a result of it. This is typically the response sent
-after a `PUT` request.
+after a `POST` request.
 
 | `204 No Content`
 | There is no content to send for this request, but the headers may be useful. The user-agent may update its cached
 headers for this resource with the new ones.
 
 | `400 Bad Request`
-| This response means that server could not understand the request due to invalid syntax.
+| This response means that server could not understand the request due to invalid syntax. This might
+also mean, there are constraints not meet by the request in the data sent.
 
 | `401 Unauthorized`
 | Although the HTTP standard specifies "unauthorized", semantically this response means "unauthenticated". That is, the
@@ -36,8 +37,7 @@ client must authenticate itself to get the requested response.
 | `404 Not Found`
 | The server can not find requested resource. This can also mean that the endpoint is valid but the resource itself
 does not exist. Servers may also send this response instead of 403 to hide the existence of a resource from an
-unauthorized client. This app specifically redirects to "/" (or index.html) for keeping consistency with the living
-(Angular) client application in the WAR artifact.
+unauthorized client..
 
 | `405 Method Not Allowed`
 | The request method is known by the server but has been disabled and cannot be used. For example, an API may forbid
@@ -45,8 +45,8 @@ unauthorized client. This app specifically redirects to "/" (or index.html) for 
 error code.
 
 | `409 Conflict`
-| This response is sent when a request conflicts with the current state of the server. In the GMS this can be sent when
-a business rule is not properly fulfilled by a request (and its data) made by the client.
+| This response is sent when a request conflicts with the current state of the server. This might
+also be sent when a business rule is not properly fulfilled by a request (and its data).
 
 | `413 Payload Too Large`
 | Request entity is larger than limits defined by server; the server might close the connection or return a
