--- a/rest/src/main/asciidoc/__http_status_codes.adoc
+++ b/rest/src/main/asciidoc/__http_status_codes.adoc
@@ -37,7 +37,7 @@ client must authenticate itself to get the requested response.
 | `404 Not Found`
 | The server can not find requested resource. This can also mean that the endpoint is valid but the resource itself
 does not exist. Servers may also send this response instead of 403 to hide the existence of a resource from an
-unauthorized client..
+unauthorized client.
 
 | `405 Method Not Allowed`
 | The request method is known by the server but has been disabled and cannot be used. For example, an API may forbid
