docs(#65): Add API docs for post list by status

--- a/rest/src/main/asciidoc/__resource_post_index.adoc
+++ b/rest/src/main/asciidoc/__resource_post_index.adoc
@@ -18,6 +18,8 @@ include::__resource_post_partial_update.adoc[]
 
 include::__resource_post_list.adoc[]
 
+include::__resource_post_list_by_status.adoc[]
+
 include::__resource_post_get.adoc[]
 
 include::__resource_post_get_not_found.adoc[]
