--- a/rest/src/main/asciidoc/__resource_post_partial_update.adoc
+++ b/rest/src/main/asciidoc/__resource_post_partial_update.adoc
@@ -6,6 +6,9 @@ A `PATCH` (partial and full update) request updates a post.
 By using this update type, only those fields which are sent in the payload are updated, the rest of
 them remain unchanged.
 
+The post `status` is never updated from this request. To update it the
+<<resource-post-full-update, full update>> must be used instead.
+
 include::__H_REQUEST.adoc[]
 
 include::__H_REQUEST_PATH_PARAMS.adoc[]
