--- a/rest/src/main/asciidoc/__introduction.adoc
+++ b/rest/src/main/asciidoc/__introduction.adoc
@@ -1,4 +1,4 @@
 [introduction]
 == Introduction
 
-Welcome to the API for providing access to the wcdevs.org webservices.
+Welcome to _wcdevs.org_ REST API.
