--- a/rest/src/main/asciidoc/__resource_post_create.adoc
+++ b/rest/src/main/asciidoc/__resource_post_create.adoc
@@ -1,7 +1,7 @@
 [[resource-post-create]]
 ==== Creating a new post
 
-A `POST` request adds a new _Post_ entry in the DB.
+A `POST` request adds a new _Post_ entry in the DB (with *_PUBLISHED_* status by default if it's not specified otherwise).
 This service is only available to users with enough permissions to create a new post.
 
 include::__H_REQUEST.adoc[]
